uncomment hair color

--- a/index.html
+++ b/index.html
@@ -2322,7 +2322,7 @@
                 ';--- Physical Traits ---' + '\r\n' +
                 '素質,性別,' + sex.value + '\r\n' + 
                 traitPhysPrint +
-                ';素質,髪色,' + printHair + '\r\n' +
+                '素質,髪色,' + printHair + '\r\n' +
                 '素質,Ｖ締まり,' + vtightness.value + '\r\n' + 
                 '素質,Ａ締まり,' + atightness.value + '\r\n' + 
 
